Comment out the line which was the source of the wrong position bug when zooming

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -62,6 +62,11 @@ $female-color: #729fcf;
     border: 1px solid black;
 }
 
+.timeline-number {
+    margin-top: -0.5em;
+    margin-left: 0.1em;
+}
+
 #timeline-container-wrapper {
     left: 0px;
     top: 0px;
